Fix mobile menu item horizontal alignment (#43)

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -253,7 +253,7 @@ nav ul {
         padding:10px 20px 10px 20px;
         flex-grow:1;
         white-space:nowrap;
-        text-align:center;
+        text-align:left;
         background-color:transparent;
         border:none;
         border-radius:0;
